[package]
name = "gd-props-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0"
quote = "^1.0"
ron = "^0.8"
serde = { version = "^1", features = ["derive"] }
godot = { version = "0.1.*" }
venial = "^0.5.0"
gd-props-defs = { path = "../gd-props-defs" }

[dev-dependencies]
gd-props = { path = "../gd-props" }