[package]
name = "gd-props"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gd-props-macros = { path = "../gd-props-macros" }
gd-props-defs = { path = "../gd-props-defs" }
godot = { git = "https://github.com/StatisMike/gdext", branch = "hotfix/CI-errors-godot-build" }
serde = { version = "^1", features = ["derive"] }
ron = "0.8.1"
rmp-serde = "1.1.2"
