[package]
name = "godot_io"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
godot_io_derive = { path = "../godot_io_derive" }
godot_io_defs = { path = "../godot_io_defs" }
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
once_cell = "^1.18.0"

[dev-dependencies]
serde = { version = "^1", features = ["derive"] }