[package]
name = "godot_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
godot_io_derive = { path = "../godot_io_derive" }
godot_io_defs = { path = "../godot_io_defs" }
# godot = {path = "../../../GODOT/gdext/godot"}
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }

[dev-dependencies]
serde = { version = "^1", features = ["derive"] }
ron = "0.8.1"
rmp-serde = "1.1.2"
