[package]
name = "godot_io_defs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "^0.8"
serde = { version = "^1", features = ["derive"] }
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
once_cell = "^1.18.0"
