[package]
name = "godot_io_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "^1.0"
quote = "^1.0"
ron = "^0.8"
serde = { version = "^1", features = ["derive"] }
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
venial = "^0.5.0"
godot_io_defs = { path = "../godot_io_defs" }