[package]
name = "ronres-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
ron = "0.8.1"
serde = { version = "1.0.189", features = ["derive"] }
# syn = { version = "1.0", features = ["full", "parsing"] }
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
venial = "0.5.0"

# [dev-dependencies]
# ronres = { path = "../ronres"}