[package]
name = "ronres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ronres-derive = { path = "../ronres-derive" }
ronres-defs = { path = "../ronres-defs" }
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
once_cell = "1.18.0"

[dev-dependencies]
serde = { version = "1.0.189", features = ["derive"] }