[package]
name = "tests"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
godot_io = {path = "../godot_io"}
once_cell = "^1.18.0"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
serde = { version = "^1", features = ["derive"] }
