[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
gd-props = {path = "../../gd-props"}
gd-rehearse = { git = "https://github.com/StatisMike/gd-rehearse", branch = "master" }
## feature currently needed for `gd-props` to work: https://github.com/godot-rust/gdext/issues/597
godot = { version = "0.1.*", features = ["experimental-threads"] }
serde = { version = "^1", features = ["derive"] }
rand = "^0.8.5"
ron = "^0.8.1"
rmp-serde = "^1.1.2"
